# test-template

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: comm.h  csapp.h  foo.h
lib/src/: comm.c  csapp.c
test/: CMakeLists.txt  external-test.cpp  foo-test.cpp
